remove extra padding on home page footer due to sticky footer fix

--- a/app/assets/stylesheets/new-styles.css.scss
+++ b/app/assets/stylesheets/new-styles.css.scss
@@ -198,7 +198,6 @@ font-weight: 700;
 
 	.linkGroup {
 		padding-top:40px;
-		padding-bottom:40px;
 		text-align:center;
 		
 		h3 {
